# blitz3d_soloud

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
BLITZ3D_INSTALL/: versions.txt
BLITZ3D_INSTALL/Games/TunnelRun/: functions.bb  globs.bb  tr.bb
BLITZ3D_INSTALL/Games/bb3d_asteroids/: EdzUpAsteroids.bb
BLITZ3D_INSTALL/Games/wing_ring/: wing_ring.bb
BLITZ3D_INSTALL/cfg/: .gitignore  blitzide.prefs  blitzide.prefsx
BLITZ3D_INSTALL/help/: uninstall.ini
BLITZ3D_INSTALL/help/commands/: ascii.htm  command_list_2d_a-z_d.htm  command_list_2d_cat_1.htm  index.htm  scancodes.htm
BLITZ3D_INSTALL/help/commands/2d_commands/: Dialect.htm  LoadFont.htm  SetFont.htm  Text.htm
BLITZ3D_INSTALL/help/commands/2d_examples/: ACos.bb  ASin.bb  ATan.bb  ATan2.bb  Abs.bb  And.bb  AppTitle.bb  Asc.bb  AutoMidHandle.bb  AvailVidMem.bb  BackBuffer.bb  Bin.bb  Case.bb  Ceil.bb  ChangeDir.bb  ChannelPan.bb  ChannelPitch.bb  ChannelPlaying.bb  ChannelVolume.bb  Chr.bb  CloseDir.bb  CloseFile.bb  CloseMovie.bb  Cls.bb  ClsColor.bb  ColorBlue.bb  CommandLine.bb  Const.bb  CopyBank.bb  CopyFile.bb  CopyImage.bb  CopyPixelFast.bb  CopyRect.bb  Cos.bb  CreateDir.bb  CreateImage.bb  CreateNetPlayer.bb  CreateTCPServer.bb  CreateTimer.bb  CurrentDate.bb  (+225 more)
BLITZ3D_INSTALL/help/commands/3d_commands/: CreateTexture.htm  LoadAnimTexture.htm  LoadTexture.htm  TextureFilter.htm
BLITZ3D_INSTALL/help/commands/3d_examples/: AddMesh.bb  AddTriangle.bb  AmbientLight.bb  AnimateMD2.bb  AntiAlias.bb  BSPAmbientLight.bb  BrushColor.bb  BrushTexture.bb  CameraClsColor.bb  CameraClsMode.bb  CameraFogColor.bb  CameraFogMode.bb  CameraFogRange.bb  CameraPick.bb  CameraProjMode.bb  CameraProject.bb  CameraRange.bb  CameraViewport.bb  CameraZoom.bb  CaptureWorld.bb  ClearCollisions.bb  Collisions.bb  CopyEntity.bb  CopyMesh.bb  CountChildren.bb  CountGfxModes3D.bb  CreateBrush.bb  CreateCamera.bb  CreateCone.bb  CreateCube.bb  CreateCylinder.bb  CreateLight.bb  CreateListener.bb  CreateMesh.bb  CreateMirror.bb  CreatePivot.bb  CreatePlane.bb  CreateSphere.bb  CreateSprite.bb  CreateTerrain.bb  (+100 more)
BLITZ3D_INSTALL/help/commands/css/: commands.css  menu.css
BLITZ3D_INSTALL/help/commands/scancode/: keyboard.htm
BLITZ3D_INSTALL/help/language/: lang_ref_keywords.html
BLITZ3D_INSTALL/samples/AGore/: start.bb
BLITZ3D_INSTALL/samples/Hi-Toro/Death Island/: deathisland.bb
BLITZ3D_INSTALL/samples/Richard_Betson/: start.bb
BLITZ3D_INSTALL/samples/Richard_Betson/Big_Bang_1b/: Big_Bang_1b.bb
BLITZ3D_INSTALL/samples/Richard_Betson/Binary_Cage_12/: Binary_Cage_12.bb
BLITZ3D_INSTALL/samples/Richard_Betson/Power_fountain_b/: power_fountian_b.bb
BLITZ3D_INSTALL/samples/Richard_Betson/emerald_gate/: Emerald_Gate_1.bb
BLITZ3D_INSTALL/samples/Skully/: start.bb
BLITZ3D_INSTALL/samples/mak/: start.bb
BLITZ3D_INSTALL/samples/si/fps/: fps.bb
BLITZ3D_INSTALL/samples/warpy/: blitzdoc.bb
bblaunch/: CMakeLists.txt  bblaunch.cpp  checkdx.cpp
bbruntime/: CMakeLists.txt  bbaudio.cpp  bbaudio_soloud.cpp  bbaudio_soloud.h  bbbank.h  bbblitz3d.cpp  bbblitz3d.h  bbgraphics.cpp  bbruntime.cpp  bbsgd.cpp  bbsgd.h  bbsockets.cpp
bbruntime_dll/: CMakeLists.txt  bbruntime_dll.cpp
blitz/: CMakeLists.txt  libs.cpp  main.cpp
blitz3d/: CMakeLists.txt  entity.cpp  geom.h  listener.cpp  loader_3ds.cpp  loader_x.cpp  md2rep.cpp  object.cpp  object.h
blitzide/: CMakeLists.txt  about.cpp  blitzide.aps  blitzide.cpp  blitzide.rc  editor.cpp  editor.h  htmlhelp.h  libs.cpp  libs.h  mainframe.cpp  mainframe.h  prefs.cpp  prefs.h  resource.h  stdafx.h
compiler/: CMakeLists.txt  parser.cpp  parser.h  stmtnode.cpp  toker.cpp  toker.h  varnode.cpp  varnode.h
compiler/assem_x86/: asm_insts.cpp  assem_x86.cpp
config/: CMakeLists.txt  config.h
debugger/: CMakeLists.txt  debuggerapp.cpp  debugtree.cpp  mainframe.cpp  sourcefile.cpp  sourcefile.h  stdafx.h  stdutil.cpp
fmod375/: CMakeLists.txt
freeimage/: CMakeLists.txt  FreeImage.h  FreeImageIO.h  Plugin.h  Quantizers.h  Utilities.h
freeimage/FreeImage/: BitmapAccess.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion8.cpp  FreeImage.cpp  FreeImageIO.cpp  GetType.cpp  LoadFunctions.cpp  Makefile  NNQuantizer.cpp  Plugin.cpp  PluginBMP.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJPEG.cpp  PluginKOALA.cpp  PluginMNG.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPNG.cpp  PluginPNM.cpp  PluginPSD.cpp  PluginRAS.cpp  PluginTARGA.cpp  PluginTIFF.cpp  PluginWBMP.cpp  WuQuantizer.cpp
freeimage/FreeImageQt/: FreeImageQt.cpp  FreeImageQt.h
freeimage/LibJPEG/: jmorecfg.h  mssccprj.scc  tca.map  vssver.scc
freeimage/LibMNG/: Changes  README.contrib  README.examples  autogen.sh  libmng.h  libmng_prop_xs.c  libmng_trace.c  libmng_trace.h  libmng_types.h
freeimage/LibPNG/: png.h
freeimage/LibTIFF/: Makefile.in  Makefile.lcc  t4.h  tif_acorn.c  tif_apple.c  tif_atari.c  tif_aux.c  tif_close.c  tif_codec.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_lzw.c  tif_msdos.c  tif_next.c  tif_open.c  tif_packbits.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_unix.c  tif_version.c  tif_vms.c  tif_warning.c  tif_win3.c  (+8 more)
freeimage/Test/: Test.cpp
freeimage/ZLib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  minigzip.c  mssccprj.scc  trees.c  uncompr.c  vssver.scc  zconf.h  zutil.c  zutil.h
freetype/: CMakeLists.txt
freetype/lib/: freetype.lib
gxruntime/: CMakeLists.txt  ddutil.cpp  gxaudio.h  gxcanvas.cpp  gxcanvas.h  gxfont.cpp  gxfont.h  gxgraphics.cpp  gxgraphics.h  gxinput.cpp  gxinput.h  gxlight.h  gxruntime.cpp  gxruntime.h  gxruntime_b3d.cpp  gxruntime_b3d.h  gxruntime_sgd.cpp  gxruntime_sgd.h  gxscene.cpp  gxutf8.cpp  gxutf8.h  std.h
libsgd/: CMakeLists.txt
linker/: CMakeLists.txt  image_util.cpp  linker.cpp
linker_dll/: CMakeLists.txt
soloud/: CMakeLists.txt
stdutil/: CMakeLists.txt  stdutil.cpp
(+32 files in other folders)
